--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.techsure</groupId>
 		<artifactId>codedriver-parent</artifactId>
-		<version>1.0.2</version>
+		<version>[1.0.0, 2.0.0]</version>
 	</parent>
 	<artifactId>codedriver-test</artifactId>
 	<version>0.1.0.0-SNAPSHOT</version>
@@ -29,32 +29,6 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.9</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jackson-annotations</artifactId>
-					<groupId>com.fasterxml.jackson.core</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-core</artifactId>
-			<version>2.9.9</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-annotations</artifactId>
-			<version>2.9.9</version>
-		</dependency>
-		<dependency>
 			<groupId>com.techsure</groupId>
 			<artifactId>codedriver-framework</artifactId>
 			<version>0.1.0.0-SNAPSHOT</version>
@@ -62,9 +36,62 @@
 		</dependency>
 		<dependency>
 			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-tenant</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-globalsearch</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-dashboard</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techsure</groupId>
 			<artifactId>codedriver-process</artifactId>
 			<version>0.1.0.0-SNAPSHOT</version>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-change</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-report</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-event</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+			<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-dgbank</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+			<dependency>
+			<groupId>com.techsure</groupId>
+			<artifactId>codedriver-knowledge</artifactId>
+			<version>0.1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		    <!-- <scope>provided</scope> -->
+		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.21</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
