--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,7 @@
+#this config must be included by this local config.properties file
+schedule.server.id=99
+
+#the config from here would be loaded from nacos first
 db.driverClassName = com.mysql.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/codedriver?characterEncoding=UTF-8&jdbcCompliantTruncation=false&allowMultiQueries=true
 db.username = root
